test/fails/bad_functions/recursion1.lgl
int f(int x) {
    return f(x);
}

void main() {
    print f(5);
}